# embedded-vision

./: .gitmodules  Readme.md
example/imgrab/: CMakeLists.txt  Makefile  main.cpp  packet_utils.h  ps3cam.h
tools/: imgrab_client.py  packetUtils.py
